# Crash-Python-Shell

./: LICENSE  README.md
Crash/: README.md  pyproject.toml
Crash/src/: alias.json  main.py  prelude.sh
actualcode/: main.py  settings.json
